@@ -669,3 +669,8 @@
 
         * Support virtualkeypad, clipbard state shange signals from
 		  conformant
+
+2012-11-12  Jaehwan Kim
+
+        * Add elm_toolbar_item_show/bring_in.
+          It show or bring a specific item, when the toolbar can be scrolled.
